--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <title>Lemon</title>
   <link href="assets/styles/reset.css" rel="stylesheet" type="text/css"/>
+  <link href="assets/styles/class.css" rel="stylesheet" type="text/css"/>
   <link href="assets/styles/site.css" rel="stylesheet" type="text/css"/>
   <link href="assets/images/lemon.jpg" rel="shortcut icon"/>
 </head>
@@ -63,7 +64,7 @@
   end
   </pre>
 
-  <p>Obviously this an overly simplistic example, but it demonstrates well enough the overall design of Lemon
+  <p>Clearly an overly simplistic example, but it demonstrates well enough the overall design of Lemon
   tests. Notice that the <code>#TestCase</code> method references a class (this can also be a module) and the units each
   refer to a method of the class.</p>
 
@@ -104,6 +105,8 @@
 
   <p>For more information on Lemon and how to use it please see the Lemon <a href="http://wiki.github.com/proutils/lemon">Wiki</a>.</p>
 
+  <img src="assets/images/lemons-are-good.png" height="200px" align="right" />
+
   <h2>Development</h2>
 
   <p>Lemon is a ProUtils project. Development is hosted on GitHub at:</p>
@@ -115,10 +118,14 @@
   <h3>License</h3>
 
   <p>Lemon is an open-source project licensed under the terms of <b>Lesser General Public License</b>.</p>
+
+  <br/></br>
+
 </div>
 </div>
 
 <div id="footer">
+<div class="page">
   <script type="text/javascript"><!--
   google_ad_client = "pub-1126154564663472";
   /* PROUTILS 09-10-14 728x90 */
@@ -133,14 +140,21 @@
 
   <br/><br/><br/>
 
-  <img src="assets/images/lemons-are-good.jpg" height="200px" align="top" style="margin: 0 30px 30px 0;"/>
-  <a href="http://www.gnu.org/licenses/lgpl-3.0-standalone.html">
-    <img src="assets/images/lgplv3-147x51.png" align="right" style="margin: 0 0 20px 20px;" />
-  </a>
-
-  <div class="copyright">
-    <p><b>Lemon</b>, Copyright &copy; 2009 Thomas Sawyer</p>
+  <div style="margin-top: 40px; width: 780px; height: 100px; margin: 0 auto; padding: 10px 0; font-size: 110%;">
+    <div style="float: left;">
+      <a href="http://proutils.github.com/"><img src="assets/images/proutils-d.png" align="bottom" style="margin: 5px;" /></a><br/>
+      <span style="padding-left: 36px;">Lemon is a ProUtils Project</span>
+    </div>
+    <div style="width: 500px; float: left; padding: 0; text-align: left;">
+      <a href="http://www.gnu.org/licenses/lgpl-3.0-standalone.html">
+        <img src="assets/images/lgplv3-147x51.png" align="left" style="margin: 20px;" />
+      </a>
+      <p><b>Lemon</b>, Copyright &copy; 2009 Thomas Sawyer</p>
+      <p><b>Contact:</b> transfire @ gmail.com</p>
+    </div>
   </div>
+
+</div>
 </dir>
 
 </body>
