admin: continued refinement of the website

--- a/site/index.html
+++ b/site/index.html
@@ -85,7 +85,7 @@
   <p>The <tt>lemon</tt> command-line tool is used to run tests. Simply provide the name of the test files as arguments:</p>
 
   <pre class="sh_sh">
-  $ lemon test/cases/*.rb
+  > lemon test/cases/*.rb
   </pre>
 
   <p>By default the <tt>lemon</tt> command outputs the traditional dot-progress format. The <tt>--verbose</tt>
@@ -98,7 +98,7 @@
   or <tt>-c</tt> option.</p>
 
   <pre class="sh_sh">
-  $ lemon -c test/cases/*.rb
+  > lemon -c test/cases/*.rb
   </pre>
 
   <p>To enusre only the code you are interested in is checked, you can either use <tt>-r</tt> to pre-require
@@ -106,7 +106,7 @@
   to include via the <tt>--namespace</tt> or <tt>-n</tt> option.
 
   <pre class="sh_sh">
-  $ lemon -c -n HelloWorld test/cases/*.rb
+  > lemon -c -n HelloWorld test/cases/*.rb
   </pre>
 
   <p>For more information on Lemon and how to use it please see the Lemon <a href="http://wiki.github.com/proutils/lemon">Wiki</a>.</p>
@@ -151,12 +151,14 @@
       <a href="http://proutils.github.com/"><img src="assets/images/proutils-d.png" align="bottom" style="margin: 5px;" /></a><br/>
       <span style="padding-left: 36px;">Lemon is a ProUtils Project</span>
     </div>
-    <div style="width: 500px; float: left; padding: 0; text-align: left;">
+    <div class="copyright">
       <a href="http://www.gnu.org/licenses/lgpl-3.0-standalone.html">
-        <img src="assets/images/lgplv3-147x51.png" align="left" style="margin: 20px;" />
+        <img src="assets/images/lgplv3-147x51.png" align="right" style="margin: 20px;" />
       </a>
-      <p><b>Lemon</b>, Copyright &copy; 2009 Thomas Sawyer</p>
-      <p><b>Contact:</b> transfire @ gmail.com</p>
+      <p>
+        <b>Lemon</b>, Copyright &copy; 2009 Thomas Sawyer<br/>
+        <b>Contact:</b> transfire @ gmail.com
+      </p>
     </div>
   </div>
 
