admin: improve website

--- a/site/index.html
+++ b/site/index.html
@@ -14,13 +14,15 @@
 </head>
 <body onload="sh_highlightDocument();">
 
+<div id="forkme">
+  <a href="http://github.com/proutils/lemon"><img src="assets/images/forkme.png" /></a>
+</div>
+
 <div id="header">
 <div class="page">
-
-  <img src="assets/images/cut-lemon.png" height="200px" align="right"/>
+  <img src="assets/images/cut-lemon.png" height="200px" align="right" style="padding-top: 15px;"/>
   <h1><img src="assets/images/title.png"/></h1>
   <h2>Pucker-Strength Unit Testing</h2>
-
 </div>
 </div>
 
@@ -29,11 +31,11 @@
 
   <div id="nav">
     <!-- <a href="guide/doc.en/index.html">English Manual</a> &nbsp;&middot;&nbsp; -->
-    <a href="http://wiki.github.com/proutils/lemon">Documentation</a> <br/>
-    <a href="qedoc/index.html">Demonstrandum</a> <br/>
-    <a href="rdoc/index.html">API Documents</a> <br/>
-    <a href="http://googlegroups.com/group/proutils">Mailing List</a> <br/>
-    <a href="http://github.com/proutils/lemon">Development</a>
+    <a href="http://wiki.github.com/proutils/lemon">Wiki</a> <br/>
+    <a href="rdoc/index.html">API</a> <br/>
+    <a href="http://googlegroups.com/group/proutils">Email</a> <br/>
+    <a href="http://github.com/proutils/lemon/issues">Issue</a> <br/>
+    <a href="http://github.com/proutils/lemon">Code</a>
   </div>
 
   <p>Lemon is a unit testing framework which enforces highly formal
