admin: move rdocs to site and update manifest

--- a/site/index.html
+++ b/site/index.html
@@ -32,7 +32,7 @@
   <div id="nav">
     <!-- <a href="guide/doc.en/index.html">English Manual</a> &nbsp;&middot;&nbsp; -->
     <a href="http://wiki.github.com/proutils/lemon">Wiki</a> <br/>
-    <a href="rdoc/index.html">API</a> <br/>
+    <a href="doc/api/index.html">API</a> <br/>
     <a href="http://googlegroups.com/group/proutils">Email</a> <br/>
     <a href="http://github.com/proutils/lemon/issues">Issue</a> <br/>
     <a href="http://github.com/proutils/lemon">Code</a>
