--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div id="nav">
     <!-- <a href="guide/doc.en/index.html">English Manual</a> &nbsp;&middot;&nbsp; -->
     <a href="http://wiki.github.com/rubyworks/lemon">Wiki</a> <br/>
-    <a href="doc/index.html">API</a> <br/>
+    <a href="http://rubydoc.info/gems/lemon/frames">API</a> <br/>
     <a href="http://googlegroups.com/group/rubyworks-mailinglist">Email</a> <br/>
     <a href="http://github.com/rubyworks/lemon/issues">Issue</a> <br/>
     <a href="http://github.com/rubyworks/lemon">Code</a>
