--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
   <br style="clear: both;" />
 
   <div style="margin-top: 30px;">
-      <b>Lemon</b>, Copyright &copy; 2009 Thomas Sawyer &middot;
+      <b>Lemon</b>, Copyright &copy; 2009 Rubyworks &middot;
       <b>Contact:</b> transfire @ gmail.com
   </div>
 </div>
